# azure-llm-toolkit

./: .env  .env.example  .gitignore  .rules  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  FEATURES_AND_IMPROVEMENTS.md  IMPLEMENTATION_STATUS.md  LICENSE  MIGRATION_GUIDE.md  README.md  RERANKER_IMPLEMENTATION.md  pyproject.toml  show_metrics.py
.github/workflows/: publish.yml
benchmarks/: benchmark_runners.py
docs/: BATCH_API_NOTES.md  BATCH_VS_STANDARD_GUIDE.md  LIVE_METRICS_SUMMARY.md  MIGRATION_GUIDE.md  PROJECT_SUMMARY.md  TIMEOUT_AND_LOGGING.md
examples/: basic_usage.py  batch_embedding_example.py  caching_example.py  check_batch_quota.py  function_calling_example.py  otel_jaeger_demo.py  polars_batch_embedder_comprehensive.py  prometheus_dashboard_example.py  prometheus_demo_simple.py  prometheus_live_demo.py  reasoning_tokens_example.py  reranker_demo_simple.py  reranker_example.py  reranker_rate_limiting_example.py  sync_client_example.py
notebooks/: 01_getting_started.ipynb  02_rate_limiting_strategies.ipynb  03_cost_optimization.ipynb  05_agent_patterns.ipynb  README.md
src/azure_llm_toolkit/: __init__.py  analytics.py  batch.py  batch_api.py  batch_embedder.py  cache.py  circuit_breaker.py  client.py  client.py.bak  config.py  conversation.py  cost_tracker.py  dashboard.py  health.py  metrics.py  opentelemetry_integration.py  rate_limiter.py  reranker.py  streaming.py  sync_client.py  tools.py  types.py  validation.py
tests/: __init__.py  conftest.py  manual_test_max_tokens_vs_max_completion.py  test_batch_api.py  test_batch_api_client.py  test_batch_embedder.py  test_batch_runner.py  test_cache.py  test_client.py  test_gpt5_parameter_conversion.py  test_live_rate_limits.py  test_max_tokens_vs_max_completion.py  test_rate_limiter_integration.py  test_reranker.py  test_reranker_rate_limit_stress.py  test_validation.py  test_vision_integration.py
tests/integration/: test_end_to_end.py  test_live_batch_api_client.py
